# pyslang-mcp

./: .gitignore  AGENTS.md  README.md  REMOTE_DEPLOYMENT.md  ci_flow.md  evaluation.xml  pyproject.toml  pyslang-mcp-plan.md  top_10_issues.md
.github/workflows/: ci.yml
docs/: coverage-plan.md
examples/hdl/: README.md  corpus.json
examples/hdl/buggy/easy/edge_detect_polarity_bug/: edge_detect.sv
examples/hdl/buggy/easy/simple_counter_priority_bug/: simple_counter.v
examples/hdl/buggy/hard/apb_timer_irq_race_bug/: apb_timer.sv  rtl.f  timer_core.sv
examples/hdl/buggy/hard/sync_fifo_count_bug/: sync_fifo.sv  sync_fifo_mem.sv
examples/hdl/buggy/medium/priority_arbiter_mask_bug/: priority_arbiter.sv
examples/hdl/buggy/medium/register_pipe_valid_bug/: register_pipe.v
examples/hdl/reference/ip/apb_timer/: timer_core.sv  timer_pkg.sv
examples/hdl/reference/ip/sync_fifo/: rtl.f  (+4 more)
reports/archive/mcp_comparison_20260426T041420Z/: index.html  results.json
reports/mcp_comparison/: index.html  results.json
reports/mcp_comparison_rtl_lint_auditor/: index.html  results.json
scripts/: __init__.py  hdl_examples.py  run_mcp_comparison.py  validate_hdl_examples.py
src/pyslang_mcp/: __init__.py  __main__.py  analysis.py  cache.py  project_loader.py  schemas.py  serializers.py  server.py  types.py
tests/: test_analysis.py  test_cache.py  test_hdl_smoke.py  test_main.py  test_project_loader.py  test_server.py
tests/fixtures/broken/: broken.sv
tests/fixtures/multi_file/: child.sv  pkg.sv  project.f  rtl.f  top.sv
tests/fixtures/multi_file/include/: defs.svh
(+7 files in other folders)
