[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pyslang-mcp"
version = "0.1.0a0"
description = "Read-only MCP server for compiler-backed Verilog and SystemVerilog analysis using pyslang."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "systemverilog", "verilog", "pyslang", "hdl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "mcp>=1.27,<2",
  "pyslang>=10,<11",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.408,<2",
  "pytest>=9,<10",
  "ruff>=0.15,<1",
]

[project.scripts]
pyslang-mcp = "pyslang_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyslang_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingModuleSource = false
reportUnknownMemberType = false
